force-app/main/default/objects/Codigo_Postal__c/fields/Calles__c.field-meta.xml
<CustomField>
    <fullName>Calles__c</fullName>
    <label>Calles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>