force-app/main/default/objects/Codigo_Postal__c/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <label>Localidad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>