force-app/main/default/objects/Codigo_Postal__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Provincia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>