force-app/main/default/objects/Codigo_Postal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Localidad__c</columns>
    <columns>Provincia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>